# lh-sequent-calc

./: .gitignore  .travis.yml  README.md  lh-sequent-calc.cabal  package.yaml
examples/homework-1/: Main.hs  Proofs.hs  homework-1.tex
src/: ReflectedPrelude.hs  SequentCalc.hs
src/Data/List/: Reflected.hs
src/Prelude/: Reflected.hs
src/SequentCalc/: Latex.hs  Syntax.hs  Util.hs
test/: Main.hs
test/should-fail/: ContractLeftDoesntMatch.hs  ContractRightDoesntMatch.hs  CutFormulasDontMatch.hs  CutNoLeftConclusions.hs  CutNoRightAssumptions.hs  IdentityDoesntMatch.hs  IdentityTooBig.hs  WeakenLeftWrongPosition.hs  WeakenRightWrongPosition.hs
test/should-pass/: ContractLeft.hs  ContractRight.hs  Cut.hs  Identity.hs  NotLeft.hs  NotRight.hs  OrLeft.hs  OrRight1.hs  OrRight2.hs  PermuteLeft.hs  PermuteRight.hs  WeakenLeft.hs  WeakenRight.hs
travis/: install-liquid-haskell.sh  install-stack.sh  install-z3.sh
